--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     {
       "name": "tf7software",
       "url": "https://github.com/tf7software",
-      "email": "rhenrywarren@gmail.com"
+      "email": "rhw@lupinevault.com"
     },
     {
       "name": "InfinityLoop",
