--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -61,6 +61,8 @@ jobs:
           git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:gh-pages
 
   build_and_deploy:
+
+    needs: [transform_and_deploy]
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
