--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,14 +25,9 @@ jobs:
         with:
           node-version: '20'
 
-      # --- ADD THIS DIAGNOSTIC STEP ---
-      - name: Check script directory contents
-        run: ls -la scripts/
-      # --------------------------------
-
       # 5. Run the Conversion Script
       - name: Run Conversion Script (MD -> HTML in root)
-        run: node ./scripts/convert.js
+        run: node ./scripts/remark.js
 
       # 6. Check for changes (Package + Generated HTML files)
       - name: Check for modified files
